[FIX] Use CSS for inline syntax formatting used in file and image gallery syntax help so that it is legible in all themes. Other small formatting changes to these interfaces.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/5.x@27929 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -248,6 +248,11 @@ ul.categories li {
 	padding: 0;
 }
 
+.inline_syntax {
+	font-family: "Lucida Console";
+	color: brown;
+}
+
 /* New Toolbars */
 
 .textarea-toolbar > div {
